--- a/index.htm
+++ b/index.htm
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>sample_cv</title>
-	<link rel="stylesheet" href="css/CV_Kavu.css">
+	<link rel="stylesheet" href="css/main.css">
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
