Added two page CV format

--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>sample_cv</title>
+	<title>Abhinav_CV_page_1</title>
 	<link rel="stylesheet" href="css/main.css">
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -10,11 +10,14 @@
 </head>
 <body>
 	<div class="float-left gray-bg left">
-		<div class="name">
-			<div class="firstname"><b>YOUR</b></div>
-			<div class="lastname"><b>NAME</b></div>
+		<div class="name-image">
+			<img src="res/Passport_Photo_Abhinav_Jain.jpg" alt="Abhinav" />
 		</div>
-		<div class="designation"><b>Software Developer</b></div>
+		<div class="name">
+			<div class="firstname"><b>ABHINAV</b></div>
+			<div class="lastname"><b>JAIN</b></div>
+		</div>
+		<div class="designation"><b>SOFTWARE DEVELOPER</b></div>
 
 		<div class="profile">
 			<div class="profile-header">PROFILE</div>
@@ -31,12 +34,12 @@
 
 			<div class="border-bottom-gray">
 				<span class="glyphicon glyphicon-envelope"></span>
-				<span class="email"><b>user-name@domain.com</b></span>
+				<span class="email"><b>abhinavjain0809@gmail.com</b></span>
 			</div>
 
 			<div class="border-bottom-gray">
 				<span class="glyphicon glyphicon-earphone"></span>
-				<span class="phone"><b>your-phone-number</b></span>
+				<span class="phone"><b>+91-9547177346</b></span>
 			</div>
 		</div>
 
@@ -46,85 +49,75 @@
 				<div class="degree">
 					<div class="degree-name"><b>B. Tech, CSE</b></div>
 					<div class="degree-college"><b>NIT Durgapur</b></div>
-					<div class="degree-cgpa">CGPA: 8.76</div>
-					<div class="degree-term">2013 - 2017</div>
+					<div class="degree-score-tenure">
+						<span class="degree-cgpa">CGPA: <b>9.08</b></span>
+						<span class="degree-term">(2012 - 2016)</span>
+					</div>
 				</div>
 
 				<div class="degree">
 					<div class="degree-name"><b>Intermediate</b></div>
-					<div class="degree-college">Ben Hur Public School</div>
-					<div class="degree-cgpa">CGPA: 95.6</div>
-					<div class="degree-term">2011 - 2012</div>
+					<div class="degree-college">Modern School, Noida</div>
+					<div class="degree-score-tenure">
+						<span class="degree-cgpa">%age: <b>93.2</b></span>
+						<span class="degree-term">(2010 - 2011)</span>
+					</div>
 				</div>
 
 				<div class="degree">
 					<div class="degree-name"><b>High School</b></div>
-					<div class="degree-college">Ben Hur Public School</div>
-					<div class="degree-cgpa">CGPA: 10.0</div>
-					<div class="degree-term">2009 - 2010</div>
+					<div class="degree-college">Modern School, Noida</div>
+					<div class="degree-score-tenure">
+						<span class="degree-cgpa">%age: <b>92.8</b></span>
+						<span class="degree-term">(2008 - 2009)</span>
+					</div>
 				</div>
-			</div>
-		</div>
-
-		<div class="profile">
-			<div class="miscellaneous-header">MISCELLANEOUS</div>
-			<div class="profile-content">
-				Financial co-ordinator at Radio NITroz, NIT Durgapur.
-				<br />
-				Unit Leader at NSS, NIT Durgapur.
 			</div>
 		</div>
 	</div>
 
 	<div class="float-left right">
-		<div class="experience">
-			<div class="experience-header"><b>EXPERIENCE</b></div>
-			<hr class="hr"></hr>
-			<div class="job-content">
-				<div class="job">
-					<div class="job-position"><b>Applications Engineer</b></div>
-					<div class="job-company-term">
-						<span class="job-company">Oracle India Pvt Ltd</span>
-						<span class="job-term">July 2017 - Present</span>
-					</div>
-					<div class="job-description">
-						Working in the CRM Engineering team of the organization whose responsibility is to identify and troubleshoot complex functional and non-functional production issues and finding the Root Cause Analysis at the server and code level.
-					</div>
-				</div>
-
-				<div class="job">
-					<div class="job-position"><b>Software Developer Intern</b></div>
-					<div class="job-company-term">
-						<span class="job-company">Idea Cellular Pvt Ltd</span>
-						<span class="job-term">May 2016 - June 2016</span>
-					</div>
-					<div class="job-description">
-						Designed an application for the audit department which facilitated them to easily audit the monthly reports. Users were given different access rights based on their designation.
-						<br />
-						<b>Technologies Used:</b> HTML, CSS, JavaScript, PHP
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<div class="skills">
-			<div class="interests-header"><b>SKILLS</b></div>
+		
+		<!-- <div class="self-projects">
+			<div class="interests-header"><b>EDUCATION</b></div>
 			<hr class="hr"></hr>
 			<div class="interests-content">
-				<div class="interests-row">
-					<div class="float-left interests-left">C</div>
-					<div class="float-right interests-right">MySQL</div>
-					<div class="interests-mid">C++</div>
+				<div class="degree">
+					<div class="degree-name">
+						<span class="float-left"><b>B. Tech, CSE</b></span>
+						<span class="float-right">2012 - 2016</span>
+					</div>
+					<div class="degree-name">
+						<span class="float-left"><b>NIT Durgapur</b></span>
+						<span class="float-right"><b>CGPA: 9.08</b></span>
+					</div>
 				</div>
-				<div class="interests-row">
-					<div class="float-left interests-left">HTML</div>
-					<div class="float-right interests-right">OS</div>
-					<div class="interests-mid">CSS</div>
+
+				<div class="degree">
+					<div class="degree-name">
+						<span class="float-left"><b>Intermediate</b></span>
+						<span class="float-right">2010 - 2011</span>
+					</div>
+					<div class="degree-name">
+						<span class="float-left">Modern School, Noida</span>
+						<span class="float-right"><b>%age: 93.2</b></span>
+					</div>
+				</div>
+
+				<div class="degree">
+					<div class="degree-name">
+						<span class="float-left"><b>High School</b></span>
+						<span class="float-right">2008 - 2009</span>
+					</div>
+					<div class="degree-name">
+						<span class="float-left">Modern School, Noida</span>
+						<span class="float-right"><b>%age: 92.8</b></span>
+					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 
-		<div class="paper-publications">
+		<!-- <div class="paper-publications">
 			<div class="interests-header"><b>PAPER PUBLICATIONS</b></div>
 			<hr class="hr"></hr>
 			<div class="paper-publications-content">
@@ -132,30 +125,50 @@
 					Published a paper on <b>Multiple Sink Placement Strategy in Wireless Sensor Network for network lifetime maximization</b> in fourth NSysS 2017, Dhaka.
 				</div>
 			</div>
-		</div>
+		</div> -->
 
-		<div class="self-projects">
-			<div class="interests-header"><b>SELF PROJECTS</b></div>
+		<div class="experience">
+			<div class="experience-header"><b>EXPERIENCE</b></div>
 			<hr class="hr"></hr>
-			<div class="interests-content">
-				<div class="job-description">
-					<b>This CV</b> has been designed by me using HTML and CSS.
-				</div>
-			</div>
-		</div>
+			<div class="job-content">
+				<div class="job">
+					<div class="job-position"><b>Software Development Engineer</b></div>
+					<div class="job-company-term">
+						<span class="job-company"><b>OlaCabs</b></span>
+						<span class="job-term">August 2017 - Present</span>
+					</div>
+					<div class="job-team-name">
+						<span>Ola Share</span>
+					</div>
+					<div class="job-description">
+						Share your ride. Save your travel cost.
+						I worked on the below major features over and above the everyday small tasks during my time in the team:
 
-		<div class="interests">
-			<div class="interests-header"><b>INTERESTS</b></div>
-			<hr class="hr"></hr>
-			<div class="interests-content">
-				<div class="interests-row">
-					<div class="float-left interests-left">SINGING</div>
-					<div class="float-right interests-right">MEDITATION</div>
-					<div class="interests-mid">COOKING</div>
-				</div>
-				<div class="interests-row">
-					<span class="float-left interests-left">BADMINTON</span>
-					<div class="interests-mid">PAINTING</div>
+						<li><b>Reaffirmation on Cab Cancellation</b></li>
+						<p>This feature aims at reducing customer cancellations by showing a prompt based on the historical supply and demand trend for that pickup area.<br/>
+						<b>Impact: </b>Customer cancellations reduced by 6.3% on average leading to an extra 12.6K more completed bookings per day.</p>
+
+						<li><b>Configurable retry params while finding a cab</b></li>
+						<p>This feature retries the allotment process in case of non-availability of cabs with an increased cab search radius/ETA rather than the original static values.<br/>
+						<b>Impact: </b>Fulfillment rate for Share requests increased by 5.4%.</p>
+
+						<li><b>Share in International</b></li>
+						<p>Played a major role in taking Share to the international market by actively incorporating all the changes within a short span of time. The best part was that there was zero downtime when these changes were deployed to production. The predicted impact is around 10K bookings per day and is bound to increase exponentially.</p>
+
+						<li><b>Reallotments for Share</b></li>
+						<p>This feature tries to allot a cab to the customer in case the former booking was canceled by the driver.<br/>
+						<b>Impact: </b>Additional 5K completed bookings per day.</p>
+					</div>
+					
+					<div class="job-team-name">
+						<span>Developer Platform</span>
+					</div>
+					<div class="job-description">
+						This platform allows the users to book an Ola via third-party partner apps like PhonePe, PayTm, Airtel, etc. I'm responsible for taking care of ongoing integrations with partners.
+						<br/>
+						This rounds up around 30K bookings per day.
+					</div>
+
 				</div>
 			</div>
 		</div>
